@@ -111,6 +111,14 @@
 				</script>
 %			}
 
+%			if ($fullmsg) { 
+				<script type="text/javascript" language="javascript">
+					$(document).ready(function() {
+						$.jGrowl("<% $fullmsg %>", { header: 'ATTENTION!', theme: 'fullmsg', life: 10000, position: 'center' });
+					});
+				</script>
+%			}
+
 %			if ($r->hostname eq "www.tabroom.com" ) { 
 				<script>
 					  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
