@@ -2934,6 +2934,38 @@ div.jGrowl div.quick {
 	color            : #222222;
 }
 
+div.jGrowl div.fullmsg {
+	background-color    : #FFE3CF;
+	color               : #222222;
+	margin              : auto;
+	margin-top          : 50px;
+	margin-left         : 60px;
+	width               : 700px;
+	padding-top         : 50px;
+	padding-bottom      : 20px;
+	height              : 400px;
+	background-image    : url(/lib/images/oh-noes-everybody-panic.gif);
+	background-repeat   : no-repeat;
+	background-position : center 205px;
+}
+
+div.jGrowl div.fullmsg div.header {
+	text-align     : center;
+	font-size      : 350% !important;
+	color          : #660000;
+	border-bottom  : 3px solid #660000 !important;
+	padding-bottom : 20px;
+	margin-bottom  : 20px;
+}
+
+div.jGrowl div.fullmsg div.message {
+	font-size    : 25px;
+	font-family  : Arvo;
+	margin-left  : 15px;
+	margin-right : 15px;
+	margin-top   : 25px;
+	line-height  : 32px;
+}
 
 div.jGrowl div.jGrowl-notification {
 	min-height: 			40px;
