@@ -106,8 +106,12 @@
 
 	}
 
+	my $oh_crap_ran_out;
+
 	PANEL:
 	foreach my $panel (@undone) { 
+
+		$oh_crap_ran_out++;
 
 		my @ada_rooms;
 
@@ -122,6 +126,7 @@
 				$room_count{$room->id}++;
 				$panel->flight($room_count{$room->id});
 				$panel->update;
+				$oh_crap_ran_out--;
 				next PANEL;
 			}
 		}
@@ -132,12 +137,14 @@
 			$room_count{$room->id}++;
 			$panel->flight($room_count{$room->id});
 			$panel->update;
+			$oh_crap_ran_out--;
 			next PANEL;
 		}
 
 	}
 
 	my $msg = "Rooms have been assigned";
-	$m->redirect("/panel/schemat/show.mhtml?round_id=$round_id&disp=1&msg=$msg");
+	my $full_err = "Insufficent rooms were available.  Some rounds do not have rooms!";
+	$m->redirect("/panel/schemat/show.mhtml?round_id=$round_id&disp=1&msg=$msg&fullmsg=$full_err");
 
 </%init>
